fixed spacing issues in nav bar and in bottom nav bar

--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -1,5 +1,37 @@
-.container {
-  margin: 0 auto;
+.nav-top {
+  display: flex;
+  width: 100%;
+  padding: 30px 150px;
+  border-bottom: 1.5px solid rgb(207 207 207);
+}
+
+.nav-content {
+  text-align: end;
+  width: 100%;
+}
+
+.nav-content > a {
+  font-family: Avenir, sans-serif;
+  padding-left: 17px;
+  padding-right: 17px;
+  font-size: 1rem;
+  color: rgb(186 186 186);
+}
+
+.nav-content > button {
+  background-color: #294464;
+  border: none;
+  width: 145px;
+  height: 50px;
+  color: #efefef;
+  border-radius: 5px;
+  font-size: 1.1rem;
+  padding: -1rem;
+  font-family: Avenir, sans-serif;
+}
+
+.nav-top > img {
+  width: 130px;
 }
 
 .row {
@@ -65,6 +97,10 @@ p {
 
 .address > p {
   color: rgb(250 250 250);
+}
+
+.bottom-navbar > p {
+  color: white;
 }
 
 div.left-column > p {
@@ -213,7 +249,7 @@ li {
 
 #hero-portion {
   margin-top: 2rem;
-  margin-right: 18%;
+  margin-right: 5%;
 }
 
 .hero-picture {
@@ -222,7 +258,7 @@ li {
   background-image: url("images/hero.jpg");
   background-size: cover;
   position: relative;
-  left: 12%;
+  left: 6%;
   top: 50%;
 }
 
@@ -277,8 +313,9 @@ li {
 
 .company {
   display: inline-block;
-  margin-bottom: 5rem;
+  margin-bottom: rem;
   margin-left: 3rem;
+  align-items: start;
 }
 
 .company > ul {
@@ -293,4 +330,45 @@ li {
 
 .nav-bar-right {
   margin-right: 7rem;
+}
+
+footer {
+  display: flex;
+  padding: 60px 100px;
+  align-items: center;
+  color: rgb(240 240 240);
+  background-color: rgb(82 83 81);
+}
+
+address {
+  flex-grow: 1;
+  font-style: normal;
+  font-size: 0.75rem;
+  line-height: 1.5rem;
+  margin-bottom: 25%;
+  font-family: Avenir, sans-serif;
+}
+
+.address > img {
+  width: 150px;
+  margin-bottom: 50px;
+}
+
+.bottom-nav-columns {
+  display: flex;
+  position: relative;
+  flex-grow: 1;
+  justify-content: flex-end;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.bottom-navbar {
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.header {
+  text-transform: uppercase;
+  font-size: 1.1rem;
 }
